Fix body overflowing html

--- a/public/global.css
+++ b/public/global.css
@@ -49,19 +49,16 @@
     0px 24px 38px 3px rgba(0, 0, 0, 0.14), 0px 9px 46px 8px rgba(0, 0, 0, 0.12);
 }
 
-html {
-  overflow-y: scroll;
-}
-
 html,
 body {
   width: 100%;
 }
 
 html {
+  overflow-y: scroll;
   background-color: var(--color-background-outside);
   font-size: 16px;
-  height: -webkit-fill-available;
+  min-height: -webkit-fill-available;
 }
 
 body {
@@ -70,10 +67,7 @@ body {
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-  /* height: 1px is a hack needed to fix a bug in firefox*/
-  /* height: 1px; */
   min-height: 100vh;
-  min-height: -webkit-fill-available;
   max-width: var(--app-max-width);
   background-color: var(--color-background);
 }
@@ -166,5 +160,16 @@ input:focus-visible {
   :root {
     /* only highlight hovering not on phone*/
     --background-hover-list: var(--color-hover);
+  }
+}
+
+/* 
+Hacky way to detect Safari on iOS. Need to do this because if applying
+min-height: -webkit-fill-available also on chrome, the body will have the wrong
+height (i.e. equals content instead of window height) if there's no content.
+*/
+@supports (-webkit-touch-callout: none) {
+  body {
+    min-height: -webkit-fill-available;
   }
 }
